# ROS-Server-Client

tasksrv/: CMakeLists.txt  package.xml
tasksrv/src/: client.cpp  service.cpp
